--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "./.eslintrc.js"
   },
   "browserslist": {
     "production": [
@@ -36,5 +36,32 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "pretty-quick",
+      "eslint --config ./.eslintrc.precommit.js --fix",
+      "git add",
+      "yarn test --bail --findRelatedTests"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "@typescript-eslint/parser": "^2.16.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jest": "^23.6.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "husky": "^4.0.10",
+    "lint-staged": "^10.0.1",
+    "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1"
+  }
 }
