--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
-      "pretty-quick",
+      "pretty-quick --staged",
       "eslint --config ./.eslintrc.precommit.js --fix",
-      "git add",
       "yarn test --bail --findRelatedTests"
+    ],
+    "**/*.{json}": [
+      "pretty-quick --staged"
     ]
   },
   "husky": {
