--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/redux-immutable-state-invariant": "^2.1.1",
+    "fetch-mock": "^8.3.2",
     "fromentries": "^1.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
