--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "husky": "^4.0.10",
     "lint-staged": "^10.0.1",
+    "node-fetch": "^2.6.0",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1"
   }
