--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Installing dependencies
         run: yarn install --frozen-lockfile
       - name: Running tests
-        run: yarn test --coverage
+        run: yarn test --coverage --watchAll=false
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
