--- a/package.json
+++ b/package.json
@@ -36,6 +36,13 @@
   "eslintConfig": {
     "extends": "./.eslintrc.js"
   },
+  "jest": {
+    "coveragePathIgnorePatterns": [
+      "<rootDir>/src/index.tsx",
+      "<rootDir>/src/serviceWorker.ts",
+      "<rootDir>/src/store/__stubs/"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -64,6 +71,8 @@
     }
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^3.2.1",
+    "@types/redux-mock-store": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
     "eslint": "^6.8.0",
@@ -77,6 +86,8 @@
     "lint-staged": "^10.0.1",
     "node-fetch": "^2.6.0",
     "prettier": "^1.19.1",
-    "pretty-quick": "^2.0.1"
+    "pretty-quick": "^2.0.1",
+    "react-test-renderer": "^16.12.0",
+    "redux-mock-store": "^1.5.4"
   }
 }
